# garage

./: Docker_CMD  Dockerfile  Makefile  README.md  run.sh
ansible/: ansible.md  cheatsheet.sh
apparmor/: cheatsheet.sh  test.sh
aws/: aws-cli.md  aws.md  cloud.md
dns/: 168.192.in-addr.arpa.zone  cheatsheet.sh  myserver1.com.zone  myserver2.com.zone
dockercompose/: bd.sh  docker-compose.yml
git/: Dockerfile  cheatsheet.sh  gitconfig
grafana/: Dockerfile  grafana.ini
helm/: helm.md
http/: cheatsheet.sh
influxdb/: Dockerfile
iscsi/: cheatsheet.sh
jenkins/: README.md  claude_desktop_config.json  default.example.env  docker-compose.yaml  dockerfile-push.sh  jenkins.md
kubernetes/: kubernetes.md
mcp/: docker-compose.yml
mcp/server/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
mcp/server/src/: main.py
mermaid/: draw.md
mysql/: Dockerfile  launch_mysql.sh  mydatabase.sql
nfs/: cheatsheet.sh
nginx/: cheatsheet.sh  index.html  myload-balance.conf
rsyncd/: rsyncd.conf
server/: Dockerfile  run.sh
smb/: cheatsheet.sh
squid/: cheatsheet.sh
srcs/: .bash_history  .wget-hsts  Dockerfile_myalpine  autoindent.sh  index.html  launch_server.sh  localhost  mysql_secure_installation.sh  setup_phpmyadmin.sh  setup_web.sh  setup_wordpress.sh  ssl_key_crt_gen.sh
ssh/: Dockerfile  Makefile  config  docker-compose.yml  ssh.md
terraform/: main.tf  providers.tf  terraform.md  variables.auto.tfvars  variables.tf  variables.tfvars
ufw/: cheatsheet.sh
vnc/: vncserver@.service  xstartup
wordpress/: Dockerfile  launch_wordpress.sh  (+1 more)
(+61 files in other folders)
